fix nome playlist scrollbar

--- a/css/common.css
+++ b/css/common.css
@@ -50,14 +50,14 @@ button{
 }
 
 /*md*/
-@media screen and (min-width: 878px){
+@media screen and (min-width: 640px){
     .col-container{
         width: 25%;
     }
 }
 
 /*lg*/
-@media screen and (min-width: 1000px){
+@media screen and (min-width: 878px){
     .col-container{
         width: calc(100% / 6);
     }
