--- a/css/header.css
+++ b/css/header.css
@@ -7,6 +7,8 @@ header{
     z-index: 10;
     height: 100%;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 header span{
@@ -39,6 +41,15 @@ header nav ul li img{
 
 header ul li span{
     vertical-align: middle;
+}
+
+.playlist{
+    visibility: hidden;
+    width: 0;
+    overflow: hidden;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .playlist h3{
@@ -74,7 +85,7 @@ header ul li span{
 
 .playlist ul{
     overflow-y: auto;
-    max-height: 200px;
+    flex-grow: 1;
 }
 
 .playlist ul li{
@@ -82,14 +93,9 @@ header ul li span{
 }
 
 .profilo{
-    padding-bottom: 20px;
+    justify-self: flex-end;
     padding-top: 5px;
     background-color: var(--color-1);
-    position: absolute;
-    bottom: 0;
-    left: 20px;
-    right: 20px;
-    z-index: 2;
 }
 
 .profilo img{
@@ -125,13 +131,18 @@ header ul li span{
     padding: 5px;
 }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 552px) {
     header{
         width: 300px;
     }  
 
     header nav ul li img{
         margin-right: 10px;
+    }
+
+    header .playlist{
+        visibility: visible;
+        width: auto;
     }
     
     header .non-visibile-xs{
