--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ main{
 .upgrade{
     height: 80px;
     background-color: rgba(0, 0, 0, 0.8);
-    position: fixed;
+    position: sticky;
     width: 100%;
     top: 0;
     right: 0;
@@ -28,7 +28,6 @@ main{
 }
 
 .content{
-    margin-top: 80px;
     padding: 20px;
 }
 
